--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "firebase": "^9.10.0",
+    "lodash.debounce": "^4.0.8",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-hot-toast": "^2.4.0",
     "sass": "^1.55.0"
   },
   "devDependencies": {
